Add possibility to read records in parallel